gcc/testsuite/gm2/pim/fail/missingtsize2.mod
MODULE missingtsize2 ;

CONST
   NoOfBytes = TSIZE (CARDINAL) * 4 ;

BEGIN

END missingtsize2.